add more skills

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -119,9 +119,9 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="container my-4 relative">
-    <h2 class="mb-4">Contact_</h2>
-    <h4 class="mb-4">Get in touch with me</h4>
+<!--  <section id="contact" class="container my-4 relative">-->
+<!--    <h2 class="mb-4">Contact_</h2>-->
+<!--    <h4 class="mb-4">Get in touch with me</h4>-->
 
 <!--    <div class="flex flex-col gap-4">-->
 <!--      <div class="flex flex-row gap-4">-->
@@ -130,7 +130,7 @@
 <!--        </a>-->
 <!--      </div>-->
 <!--    </div>-->
-  </section>
+<!--  </section>-->
 </main>
 
 
